# agent-harness

./: .gitignore  .pre-commit-config.yaml  .reflection_input.json  .session_friction_20260207_152258.md  .session_friction_20260209_013045.md  .session_friction_20260210_152123.md  .session_friction_20260213_152427.md  .session_friction_20260216_185220.md  .session_friction_20260216_185232.md  .session_friction_20260217_161019.md  .yamllint.yaml  AGENTS.md  ImplementationPlan.md  PLAN.md  README.md  ROADMAP.md  agent-gbv.11-plan.md  check_protocol_compliance.py  ci_test.txt  debrief.md  friction.md  harness_state.db  harness_state.db-shm  harness_state_final.db  harness_state_final.db-shm  implementation_plan_harness_1x5.md  orchestrator.yaml  pyproject.toml  reflection_input.json  run_log.txt  task.md  test_harness_state.db-shm  test_harness_state.db-wal  walkthrough.md  walkthrough_branch_coupling.md  walkthrough_pruning.md
.agent/: reflections.json  session_state.json  task.md
.agent/docs/: SOP_COMPLIANCE_CHECKLIST.md
.agent/handoffs/: README.md
.agent/plans/: README.md  agent-harness-dlk_implementation.json  agent-harness-dlk_scope.json  agent-harness-zwg_implementation.json  agent-harness-zwg_scope.json
.agent/progress-logs/: agent-2zl.md  agent-harness-50r.md  agent-harness-96v.md  agent-ujs.md
.agent/rules/: ImplementationPlan.md  MAINTENANCE.md  ROADMAP.md  coding-principles.md  reflection.schema.json  sop_checklist.schema.json
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.beads_backup_1771203804/: issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cleanup-validation.yml  post-merge-ci.yml  pr-ci.yml
.harness/: TROUBLESHOOTING.md  USER_GUIDE.md  cleanup_patterns.txt  config.json.template  install_hooks.sh  shell-aliases.sh
.harness/hooks/: pre-commit
.harness/scripts/: auto-cleanup.sh  cleanup-worktrees.sh  example-agent-workflow.sh  (+4 more)
claude_recommendations/: Beads + GitHub CICD Integration Guide.md  Catching CICD Issues Before GitHub Runs.md  Complete Harness Enforcement Architecture.md  Hardening Agent Harnesses Preventing Bypass Attempts.md  Hotfix Development Rules for Agent Harness.md  Modern Python Tooling Enhancements.md  Progressive Disclosure for Agent Codebases.md  Software Development Best Practices for Agent Harness.md
cross-agent-system/: COMMANDS.md  Epic Plan Execution - Quick Reference Card.md  Epic Plan Feedback - Detailed Improvements.md  README.md  Revised Epic Plan - Validation & Execution Guide.md  SKILLS.md  Strategic Decision Framework - MUST RESOLVE FIRST.md  api-service-reference-implementation.md  quick-wins-guide.md  sandboxed-agents-strategy.md  universal-agent-system-roadmap.md  vfs-implementation-guide.md
examples/: basic_inner_harness.py
scripts/: compare-workflows.sh
shell_scripts/: ci-local.sh  compare-workflows.sh
tests/: conftest.py  repro_issue_coupling.py  test_agent_friendly_cli.py  test_beads_id_validator.py  test_checklists.py  test_debrief_injection.py  test_flexible_ids.py  test_handoff_pr_verification.py  test_hardened_coupling.py  test_harness_full.py  test_harness_hil.py  test_harness_security.py  test_initialization.py  test_inner_harness.py  test_issue_closure_gate.py  test_langgraph_infra.py  test_missing_validators.py  test_orchestrator.py  test_orchestrator_atomic_commits.py  test_ported_validators.py  test_preflight.py  test_retrospective_enforcement.py  test_sop_enforcement_v2.py  test_sop_json_validation.py  test_wrapup_validators.py
(+81 files in other folders)
